...
        <View style={styles.spacer16} />

        {/* Schedule */}
        <CardButton
          testID="schedule_button"
          height={92}
          accessibilityLabel="Schedule"
          accessibilityHint="Opens your task list"
          onPress={() => navigation.navigate(Routes.TaskList)}
        >
          <Text style={styles.cardButtonText}>Schedule</Text>
        </CardButton>

...
