appId: com.example.careconnect_stml_flutter
---
- launchApp
- tapOn: "Sign in with Face ID"
- extendedWaitUntil:
    visible:
      text: "(.|\\n)*You are on: Home(.|\\n)*"
    timeout: 15000

- tapOn: "Schedule"
- extendedWaitUntil:
    visible:
      text: "(.|\\n)*You are on: Tasks(.|\\n)*"
    timeout: 15000

- tapOn: "Start"
- extendedWaitUntil:
    visible:
      text: "(.|\\n)*You are on: Task Step(.|\\n)*"
    timeout: 15000

- scrollUntilVisible:
    element:
      text: "Return to Tasks"
    direction: DOWN
- repeat:
    times: 10
    commands:
      - runFlow:
          when:
            visible: "Mark Done"
          commands:
            - tapOn: "Mark Done"
            - waitForAnimationToEnd

      - runFlow:
          when:
            visible: "Next Step"
          commands:
            - scroll
            - tapOn: "Next Step"
            - waitForAnimationToEnd

- extendedWaitUntil:
    visible: "Done"
    timeout: 15000

- tapOn: "Return to Tasks"

- extendedWaitUntil:
    visible:
      text: "(.|\\n)*You are on: Tasks(.|\\n)*"
    timeout: 15000

- scroll

- scrollUntilVisible:
    element:
      text: "Return to Home"
    direction: DOWN

- tapOn: "Reset Tasks (Dev)"

- tapOn: "Return to Home"

- extendedWaitUntil:
    visible:
      text: "(.|\\n)*You are on: Home(.|\\n)*"
    timeout: 15000